<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryBackground">


        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_vertical_margin"
                    android:background="@color/colorPrimaryBackground">


                        <TextView
                            android:id="@+id/about_titleDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_titleDescription"
                            android:textColor="@color/colorPrimaryCardViewText"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="24dp"/>

                        <TextView
                            android:id="@+id/about_Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_description"
                            android:textColor="@color/colorSecondaryCardViewText"
                            android:textStyle="italic"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:id="@+id/about_titleAuthors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_titleAuthors"
                            android:textColor="@color/colorPrimaryCardViewText"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="24dp"/>

                        <TextView
                            android:id="@+id/about_Authors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_Authors"
                            android:textColor="@color/colorSecondaryCardViewText"
                            android:textStyle="italic"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp" />

                        <TextView
                            android:id="@+id/about_titleContributors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_titleContributors"
                            android:textColor="@color/colorPrimaryCardViewText"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="24dp"/>

                        <TextView
                            android:id="@+id/about_Contributors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_Contributors"
                            android:textColor="@color/colorSecondaryCardViewText"
                            android:textStyle="italic"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"
/>

                        <TextView
                            android:id="@+id/about_titleContact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_titleContact"
                            android:textColor="@color/colorPrimaryCardViewText"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="24dp"/>

                        <TextView
                            android:id="@+id/about_Contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_Contact"
                            android:textColor="@color/colorSecondaryCardViewText"
                            android:textStyle="italic"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"
/>

                        <TextView
                            android:id="@+id/about_titleCopyright"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_titleCopyright"
                            android:textColor="@color/colorPrimaryCardViewText"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="24dp"
                            android:gravity="center"/>

                </LinearLayout>
        </ScrollView>
</LinearLayout>


